git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "ed95942"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "ed95942"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -4,13 +4,13 @@
   author = {Agrawal, Shreya and Barrington, Luke and Bromberg, Carla and Burge, John and Gazen, Cenk and Hickey, Jason},
   year = {2019},
   month = dec,
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1912.12132},
   eprinttype = {arxiv},
   file = {/Users/thesofakillers/Zotero/storage/MJ38L26Q/Agrawal et al_2019_Machine Learning for Precipitation Nowcasting from Radar Images.pdf;/Users/thesofakillers/Zotero/storage/S7JESKIG/1912.html},
   journal = {arXiv:1912.12132 [cs, stat]},
   keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryClass = {cs, stat}
+  primaryclass = {cs, stat}
 }
 
 @book{ahrensHowTakeSmart2017,
@@ -51,13 +51,24 @@
   author = {Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and {Herbert-Voss}, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
   year = {2020},
   month = jul,
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {2005.14165},
   eprinttype = {arxiv},
   file = {/Users/thesofakillers/Zotero/storage/SM8EDB9L/Brown et al_2020_Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/3ZTAX4HU/2005.html},
   journal = {arXiv:2005.14165 [cs]},
   keywords = {Computer Science - Computation and Language},
-  primaryClass = {cs}
+  primaryclass = {cs}
+}
+
+@inproceedings{chandorkarDynamicTimeLag2019,
+  title = {Dynamic {{Time Lag Regression}}: {{Predicting What}} \& {{When}}},
+  shorttitle = {Dynamic {{Time Lag Regression}}},
+  booktitle = {International {{Conference}} on {{Learning Representations}}},
+  author = {Chandorkar, Mandar and Furtlehner, Cyril and Poduval, Bala and Camporeale, Enrico and Sebag, Michele},
+  year = {2019},
+  month = sep,
+  file = {/Users/thesofakillers/Zotero/storage/LIJ9XN76/Chandorkar et al. - 2019 - Dynamic Time Lag Regression Predicting What & Whe.pdf;/Users/thesofakillers/Zotero/storage/5HKKV2AJ/forum.html},
+  language = {en}
 }
 
 @article{friedStatisticsGeometricRepresentation1965,
@@ -75,6 +86,21 @@
   keywords = {Atmospheric turbulence,Inhomogeneous optical media,Optical systems,Wave propagation,Wavefront distortions,Wavefronts},
   language = {EN},
   number = {11}
+}
+
+@article{gersLearningForgetContinual2000,
+  title = {Learning to {{Forget}}: {{Continual Prediction}} with {{LSTM}}},
+  shorttitle = {Learning to {{Forget}}},
+  author = {Gers, Felix A. and Schmidhuber, J{\"u}rgen and Cummins, Fred},
+  year = {2000},
+  month = oct,
+  volume = {12},
+  pages = {2451--2471},
+  issn = {0899-7667},
+  doi = {10.1162/089976600300015015},
+  file = {/Users/thesofakillers/Zotero/storage/3K4YWEGF/Gers et al. - 2000 - Learning to Forget Continual Prediction with LSTM.pdf;/Users/thesofakillers/Zotero/storage/HQAZ3FFE/Learning-to-Forget-Continual-Prediction-with-LSTM.html},
+  journal = {Neural Computation},
+  number = {10}
 }
 
 @techreport{goldmanBasicsHypothesisTests2018,
@@ -110,6 +136,20 @@
   journal = {Paul Graham}
 }
 
+@article{grangerInvestigatingCausalRelations1969,
+  title = {Investigating {{Causal Relations}} by {{Econometric Models}} and {{Cross}}-Spectral {{Methods}}},
+  author = {Granger, C. W. J.},
+  year = {1969},
+  volume = {37},
+  pages = {424--438},
+  publisher = {{[Wiley, Econometric Society]}},
+  issn = {0012-9682},
+  doi = {10.2307/1912791},
+  file = {/Users/thesofakillers/Zotero/storage/K2QG69KW/Granger - 1969 - Investigating Causal Relations by Econometric Mode.pdf},
+  journal = {Econometrica},
+  number = {3}
+}
+
 @inproceedings{groverDeepHybridModel2015,
   title = {A {{Deep Hybrid Model}} for {{Weather Forecasting}}},
   booktitle = {Proceedings of the 21th {{ACM SIGKDD International Conference}} on {{Knowledge Discovery}} and {{Data Mining}}},
@@ -140,11 +180,14 @@
   file = {/Users/thesofakillers/Zotero/storage/XPG5D7Q2/Guesalaga et al. - 2016 - FASS the full aperture seeing sensor.pdf;/Users/thesofakillers/Zotero/storage/ECAGP3KH/12.2232012.html}
 }
 
-@article{hagelinOpticalTurbulenceInfluence,
+@article{hagelinOpticalTurbulenceInfluence2010,
   title = {Optical {{Turbulence The}} Influence of the Atmosphere on Ground-Based Astronomy},
   author = {Hagelin, S and Masciadri, E and Lascaux, F},
+  year = {2010},
+  month = aug,
   pages = {1},
   file = {/Users/thesofakillers/Zotero/storage/UCMUCHXE/Hagelin et al. - The influence of the atmosphere on ground-based as.pdf},
+  journal = {ESA Earth Observation Summer School},
   language = {en}
 }
 
@@ -169,6 +212,20 @@
   language = {en}
 }
 
+@article{hochreiterLongShortTermMemory1997c,
+  title = {Long {{Short}}-{{Term Memory}}},
+  author = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  year = {1997},
+  month = nov,
+  volume = {9},
+  pages = {1735--1780},
+  issn = {0899-7667},
+  doi = {10.1162/neco.1997.9.8.1735},
+  file = {/Users/thesofakillers/Zotero/storage/ECTESAD9/Hochreiter and Schmidhuber - 1997 - Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/HLF37L9Z/Long-Short-Term-Memory.html},
+  journal = {Neural Computation},
+  number = {8}
+}
+
 @misc{informationeso.orgActiveOptics,
   title = {Active {{Optics}}},
   author = {{information@eso.org}},
@@ -191,13 +248,13 @@
   author = {Innes, Michael},
   year = {2019},
   month = mar,
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1810.07951},
   eprinttype = {arxiv},
   file = {/Users/thesofakillers/Zotero/storage/93FEGAEF/Innes - 2019 - Don't Unroll Adjoint Differentiating SSA-Form Pro.pdf;/Users/thesofakillers/Zotero/storage/U5255XA7/1810.html},
   journal = {arXiv:1810.07951 [cs]},
   keywords = {Computer Science - Programming Languages},
-  primaryClass = {cs}
+  primaryclass = {cs}
 }
 
 @misc{innesWhatDifferentiableProgramming2019,
@@ -231,18 +288,26 @@
   keywords = {_tablet,aircraft,airplanes,Airplanes,Atmospheric modeling,atmospheric techniques,balloons,commercial aircraft,geophysics computing,inference mechanisms,inference methods,instrumented high-altitude balloon,Kernel,large-scale sensor network,learned predictive model,learning (artificial intelligence),machine learning,Mathematical model,value-of-information analyses,weather forecasting,weather phenomena observation,wind,wind forecasting,Wind forecasting}
 }
 
+@misc{kowalksiHowGetRich2020,
+  title = {How to {{Get Rich}} by {{Naval Ravikant}} ({{Detailed Summary}} + {{Infographic}}) | {{Sloww}}},
+  author = {Kowalksi, Kyle},
+  year = {2020},
+  file = {/Users/thesofakillers/Zotero/storage/QBJSUBDC/how-to-get-rich-naval-ravikant.html},
+  howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/}
+}
+
 @article{maengEnhancingStratosphericWeather2019,
   title = {Enhancing {{Stratospheric Weather Analyses}} and {{Forecasts}} by {{Deploying Sensors}} from a {{Weather Balloon}}},
   author = {Maeng, Kiwan and Kushan, Iskender and Lucia, Brandon and Kapoor, Ashish},
   year = {2019},
   month = dec,
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1912.02276},
   eprinttype = {arxiv},
   file = {/Users/thesofakillers/Zotero/storage/BSYY79M3/Maeng et al_2019_Enhancing Stratospheric Weather Analyses and Forecasts by Deploying Sensors.pdf;/Users/thesofakillers/Zotero/storage/8WNHHJTC/1912.html},
   journal = {arXiv:1912.02276 [cs, stat]},
   keywords = {_tablet,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryClass = {cs, stat}
+  primaryclass = {cs, stat}
 }
 
 @article{milliNowcastingTurbulenceParanal2019,
@@ -250,13 +315,13 @@
   author = {Milli, J. and Gonzalez, R. and Fluxa, P. R. and Chacon, A. and Navarette, J. and Sarazin, M. and Pena, E. and {Carrasco-Davis}, R. and Solarz, A. and Smoker, J. and Martayan, C. and Melo, C. and Sedaghati, E. and Mieske, S. and Hainaut, O. and {Tacconi-Garman}, L.},
   year = {2019},
   month = oct,
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1910.13767},
   eprinttype = {arxiv},
   file = {/Users/thesofakillers/Zotero/storage/V4VPWUKH/Milli et al_2019_Nowcasting the turbulence at the Paranal Observatory.pdf;/Users/thesofakillers/Zotero/storage/9UP6XSYR/1910.html},
   journal = {arXiv:1910.13767 [astro-ph, physics:physics]},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Atmospheric and Oceanic Physics},
-  primaryClass = {astro-ph, physics:physics}
+  primaryclass = {astro-ph, physics:physics}
 }
 
 @misc{mullerSuccessLuckHard2020,
@@ -265,6 +330,21 @@
   year = {2020},
   month = aug,
   publisher = {{Veritasium}}
+}
+
+@article{novatiAutomatingTurbulenceModelling2021,
+  title = {Automating Turbulence Modelling by Multi-Agent Reinforcement Learning},
+  author = {Novati, Guido and {de Laroussilhe}, Hugues Lascombes and Koumoutsakos, Petros},
+  year = {2021},
+  month = jan,
+  pages = {1--10},
+  publisher = {{Nature Publishing Group}},
+  issn = {2522-5839},
+  doi = {10.1038/s42256-020-00272-0},
+  copyright = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
+  file = {/Users/thesofakillers/Zotero/storage/NUQYDM2S/Novati et al. - 2021 - Automating turbulence modelling by multi-agent rei.pdf;/Users/thesofakillers/Zotero/storage/X82SCHV3/s42256-020-00272-0.html},
+  journal = {Nature Machine Intelligence},
+  language = {en}
 }
 
 @article{osbornAtmosphericScintillationAstronomical2015,
@@ -295,6 +375,14 @@
   keywords = {Auxiliary Instrumentation:Seeing,Methods of Observation:Seeing,Seeing:Auxiliary Instrumentation,Seeing:Methods of Observation}
 }
 
+@misc{perryStructuredProcrastination2006,
+  title = {Structured {{Procrastination}}},
+  author = {Perry, John},
+  year = {2006},
+  file = {/Users/thesofakillers/Zotero/storage/5BZSEXK4/www.structuredprocrastination.com.html},
+  howpublished = {http://www.structuredprocrastination.com/}
+}
+
 @article{sarazinESODifferentialImage1990,
   title = {The {{ESO}} Differential Image Motion Monitor},
   author = {Sarazin, M. and Roddier, F.},
@@ -308,6 +396,12 @@
   keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
 }
 
+@misc{SchlepBlindness,
+  title = {Schlep {{Blindness}}},
+  file = {/Users/thesofakillers/Zotero/storage/X4R7ZR82/schlep.html},
+  howpublished = {http://www.paulgraham.com/schlep.html}
+}
+
 @misc{smylM4ForecastingCompetition2018,
   title = {M4 {{Forecasting Competition}}: {{Introducing}} a {{New Hybrid ES}}-{{RNN Model}}},
   shorttitle = {M4 {{Forecasting Competition}}},
@@ -318,6 +412,17 @@
   howpublished = {https://eng.uber.com/m4-forecasting-competition/},
   journal = {Uber Engineering Blog},
   language = {en-US}
+}
+
+@misc{spurveyFourWaysReprogram2016,
+  title = {Four {{Ways}} to {{Reprogram Your Subconscious Mind}}},
+  author = {Spurvey, Chris},
+  year = {2016},
+  month = dec,
+  file = {/Users/thesofakillers/Zotero/storage/EZQQS9QK/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c.html},
+  howpublished = {https://medium.com/@chrisspurvey/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c},
+  journal = {Medium},
+  language = {en}
 }
 
 @article{tokovininMeasuringTurbulenceProfile2002,
@@ -336,13 +441,13 @@
   author = {{van Merri{\"e}nboer}, Bart and Wiltschko, Alexander B. and Moldovan, Dan},
   year = {2017},
   month = nov,
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1711.02712},
   eprinttype = {arxiv},
   file = {/Users/thesofakillers/Zotero/storage/BVEGULZZ/van Merriënboer et al_2017_Tangent.pdf;/Users/thesofakillers/Zotero/storage/4KICLZW7/1711.html},
   journal = {arXiv:1711.02712 [cs, stat]},
   keywords = {Computer Science - Mathematical Software,Statistics - Machine Learning},
-  primaryClass = {cs, stat}
+  primaryclass = {cs, stat}
 }
 
 @misc{WhatJetStream,
