get rid of redundant white spaces

--- a/2020-10-08t15-33-40z.md
+++ b/2020-10-08t15-33-40z.md
@@ -12,9 +12,9 @@ representations underlying the original function.
 Forward-mode autodiff consists in evaluating the chain rule from the inside to
 the outside, i.e. starting the computation from the innermost representation.
 
-For a function $y(x_1, \ldots, x_n)$ with intermediate representations $w_i$, the derivative with
-respect to a given input variable $x_k$ will be given by the following recursive
-relation:
+For a function $y(x_1, \ldots, x_n)$ with intermediate representations $w_i$,
+the derivative with respect to a given input variable $x_k$ will be given by the
+following recursive relation:
 
 $$
 {\frac{\partial y}{\partial x_k}}={\frac {\partial y}{\partial w_{i-1}}}{\frac {\partial w_{i-1}}{\partial x_k}}={\frac {\partial y}{\partial w_{i-1}}}\left({\frac {\partial w_{i-1}}{\partial w_{i-2}}}{\frac {\partial w_{i-2}}{\partial x_k}}\right)={\frac {\partial y}{\partial w_{i-1}}}\left({\frac {\partial w_{i-1}}{\partial w_{i-2}}}\left({\frac {\partial w_{i-2}}{\partial w_{i-3}}}{\frac {\partial w_{i-3}}{\partial x_k}}\right)\right)=\cdots
