--- a/2020-10-12t20-26-57z.md
+++ b/2020-10-12t20-26-57z.md
@@ -3,50 +3,53 @@ date: 2020-10-12 20:26:57
 title: Representing Complex Numbers as Matrices
 id: 2020-10-12t20-26-57z
 header-includes: |
-            \usepackage{braket}
+  \usepackage{braket}
 ---
 
-For any given [group](https://en.wikipedia.org/wiki/Group_(mathematics)), it is
-often desirable to find an
-[isomorphism](https://en.wikipedia.org/wiki/Isomorphism) of this group to
-a matrix form. In other words, it is often desirable to find the equivalent
+For any given [group](<https://en.wikipedia.org/wiki/Group_(mathematics)>), it
+is often desirable to find an
+[isomorphism](https://en.wikipedia.org/wiki/Isomorphism) of this group to a
+matrix form. In other words, it is often desirable to find the equivalent
 representation of a related set of numbers in terms of matrices. This is to be
 able to use the various techniques of Linear Algebra as well as the
 computational advantages that matrices may bring.
 
 Such an approach was done for complex numbers, i.e. numbers of the form $z=a
-+ bi$.
+
+- bi$.
 
 To find this isomorphism, it would be intuitive to start thinking in terms of
 rotational transformations, given their relation to both matrices and complex
-numbers. 
+numbers.
 
 Consider the two basis vectors $\braket{1, 0}$ and $\braket{0, 1}$. Suppose we
 transform this vector space by rotating it anticlockwise by an angle $\theta$
 about the origin. This rotation will map our basis vectors respectively to the
-new vectors $\braket{\cos{\theta}, \sin{\theta}}$ and $\braket{-\sin{theta},
-\cos{\theta}}$. We can represent this transformation as a matrix $R_{\theta}$:
+new vectors $\braket{\cos{\theta}, \sin{\theta}}$ and
+$\braket{-\sin{theta},
+\cos{\theta}}$. We can represent this transformation as a
+matrix $R_{\theta}$:
 
 $$
 \begin{pmatrix}
 \cos{\theta} & -\sin{\theta}\\
-\sin{\theta} & \cos{\theta} 
+\sin{\theta} & \cos{\theta}
 \end{pmatrix}.
 $$
 
-This can be re-written as 
+This can be re-written as
 
 $$
 \cos{\theta}
 \begin{pmatrix}
 1 & 0\\
-0 & 1 
+0 & 1
 \end{pmatrix}
 +
 \sin{\theta}
 \begin{pmatrix}
 0 & -1\\
-1 & 0 
+1 & 0
 \end{pmatrix}.
 $$
 
@@ -59,22 +62,22 @@ $$
 e^{i\theta} = cos{\theta} + i\sin{\theta}.
 $$
 
-This makes sense, since multiplying by $e^{i\theta}$ represents a rotation
-about the origin through an angle $\theta$, just like out matrix. Just how we
-can generalize $e^{i\theta}$ to $re^{i\theta}$ to represent any complex number,
-we can do the same with out matrix, since this just requires multiplying by
-a constant $r$:
+This makes sense, since multiplying by $e^{i\theta}$ represents a rotation about
+the origin through an angle $\theta$, just like out matrix. Just how we can
+generalize $e^{i\theta}$ to $re^{i\theta}$ to represent any complex number, we
+can do the same with out matrix, since this just requires multiplying by a
+constant $r$:
 
 $$
 \begin{pmatrix}
 r\cos{\theta} & -r\sin{\theta}\\
-r\sin{\theta} & r\cos{\theta} 
+r\sin{\theta} & r\cos{\theta}
 \end{pmatrix}.
 $$
 
 Setting $a = \cos{\theta}$ and $b = \sin{\theta}$, we see that any complex
 number of the form $z = a + bi$ can be represented equivalently by a matrix of
-the form 
+the form
 
 $$
 \begin{pmatrix}
