dont use acronym in AI structure zettel. Add some wording to ANN zettel

--- a/2021-04-26t18-14-48z.md
+++ b/2021-04-26t18-14-48z.md
@@ -19,3 +19,6 @@ between we have what are referred to as "hidden layers".
 Very simply put, the [activations](./2021-04-26t15-11-38z.md) in one layer
 affect the activations in the next layer, until we finally obtain the output
 vector.
+
+As such, an Neural Network can be thought of as a function, taking some inputs,
+and computing some outputs based on them.
