--- a/2020-09-04t14-39-00z.md
+++ b/2020-09-04t14-39-00z.md
@@ -8,5 +8,5 @@ The field of Artificial Intelligence is the field dedicated to replicated
 intelligent behaviour in machines. Related notes to get into:
 
 - [Automatic Differentiation](./2020-10-08t15-20-39z.md)
-- [ANNs](./2021-04-26t18-14-48z.md)
+- [Artificial Neural Networks](./2021-04-26t18-14-48z.md)
 - [XLA](./2020-10-08t15-21-35z.md)
