gradient descent used isnt necessarily stochastic

--- a/2021-04-26t19-23-41z.md
+++ b/2021-04-26t19-23-41z.md
@@ -19,7 +19,7 @@ performing. "Learning" in this context therefore reduces to _minimizing the cost
 function_.
 
 This is typically accomplished with
-[stochastic gradient descent](./2021-04-27t16-51-42z.md), with the gradient of
+[gradient descent](./2021-04-27t16-51-42z.md), with the gradient of
 the cost function being computed with an algorithm known as
 [backpropagation](./2021-04-27t16-55-26z.md).
 
