fix link to weights and biases zettel

--- a/2021-04-26t19-23-41z.md
+++ b/2021-04-26t19-23-41z.md
@@ -6,21 +6,21 @@ id: 2021-04-26t19-23-41z
 
 In the context of [ANNs](./2021-04-26t18-14-48z.md), learning refers to the
 process of finding the right combination of
-[weights and biases](./2021-04-26t18-54-00z.md)
+[weights and biases](./2021-04-26t15-11-38z.md)
 
 But how does the network know what the "right" combination is? This is usually
-achieved by specifying a _cost function_. This is a function which takes the
-network's current weights and biases as input and outputs a single number
-describing the network's current performance with respect to its objective over
-several training examples.
+achieved by specifying a _cost function_ (AKA _loss function_). This is a
+function which takes the network's current weights and biases as input and
+outputs a single number describing the network's current performance with
+respect to its objective over several training examples.
 
 In general, the lower the value of the cost function, the better the network is
 performing. "Learning" in this context therefore reduces to _minimizing the cost
 function_.
 
 This is typically accomplished with
-[gradient descent](./2021-04-27t16-51-42z.md), with the gradient of
-the cost function being computed with an algorithm known as
+[gradient descent](./2021-04-27t16-51-42z.md), with the gradient of the cost
+function being computed with an algorithm known as
 [backpropagation](./2021-04-27t16-55-26z.md).
 
 Because learning is tied to cost function minimization, and this minimization is
