write some finance notes

--- a/2020-07-21t11-29-02z.md
+++ b/2020-07-21t11-29-02z.md
@@ -17,8 +17,9 @@ notes.
 - [Statistics](./2020-09-14t14-24-41z.md)
 - [The Zettelkasten Method](./2020-08-24t15-19-14z.md)
 - [Startups](./2020-10-03t22-56-43z.md)
+- [Finance](./2021-05-05t10-22-45z.md)(ew)
 - [Patente B](./2020-12-05t16-12-09z.md) (Italian driver's license)
 
 Note, these are loose categorizations of note entry-points. Once a topic is
 found, the network visualization below, links in the text and backlinks on the
-side are probably a better way for navigating the knowledge base. 
+side are probably a better way for navigating the knowledge base.
