--- a/2020-09-02t17-13-17z.md
+++ b/2020-09-02t17-13-17z.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-09-02 17:13:17
-title: Common Abbreviations in Atmospheric Sciences 
+title: Common Abbreviations in Atmospheric Sciences
 id: 2020-09-02t17-13-17z
 ---
 
@@ -18,3 +18,4 @@ Here is a list of acronyms that may appear from time to time in the field of
 - GL -> [Ground Layer](./2020-09-02t17-28-49z.md)
 - FA -> [Free Atmosphere](./2020-09-02t17-30-58z.md)
 - ECMWF -> European Centre for Medium-Range Weather Forecasts
+- PWV -> Precipitable Water Vapour
