--- a/2020-09-28t14-45-37z.md
+++ b/2020-09-28t14-45-37z.md
@@ -1,11 +1,11 @@
 ---
 date: 2020-09-28 14:45:37
-title: Covariance 
+title: Covariance
 id: 2020-09-28t14-45-37z
 ---
 
-In [statistics](2020-09-14t14-24-41z.md), covariance is used to classify
-3 types of relationships between two variables X and Y. 
+In [statistics](2020-09-14t14-24-41z.md), covariance is used to classify 3 types
+of relationships between two variables X and Y.
 
 - Relationships where there is a _positive_ relationship between X and Y.
 - Relationships where there is a _negative_ relationship between X and Y.
@@ -26,19 +26,19 @@ $$
 {X} }_{j}\right)\left(X_{ik}-{\bar {X} }_{k}\right).
 $$
 
-A positive covariance value indicates a positive relationship, and vice versa.
-A covariance of 0 indicates no relationship.
+A positive covariance value indicates a positive relationship, and vice versa. A
+covariance of 0 indicates no relationship.
 
 ---
 
 It should be noted that a covariance value is hard to interpret on its own.
 Covariance only tells us about the type of relationship. It does not tell us
 about the steepness of any eventual slope, nor does it tell us the strength of
-the relationship. 
+the relationship.
 
-This happens because covariance values are sensitive to the _scale_ of the
-data. This is why we only need to care about whether the covariance is
-positive, negative or 0, with no attention paid to the magnitude. 
+This happens because covariance values are sensitive to the _scale_ of the data.
+This is why we only need to care about whether the covariance is positive,
+negative or 0, with no attention paid to the magnitude.
 
 While covariance is not useful on its own, it is often used as a "stepping
 stone" for other, more useful calculations, such as
