machine learning/probability theory/random variable zettels

--- a/2020-09-23t14-52-52z.md
+++ b/2020-09-23t14-52-52z.md
@@ -4,7 +4,8 @@ title: Cross-Validation
 id: 2020-09-23t14-52-52z
 ---
 
-In statistics and machine learning, Cross-validation is the process of
+In [statistics](./2020-09-14t14-24-41z.md) and
+[machine learning](./2021-09-09t10-48-40z.md), Cross-validation is a process of
 _estimating_ how well a trained model generalizes by assessing its performance
 on an unseen set of data.
 
