fix tags, notes on probability theory

--- a/2021-09-09t10-48-40z.md
+++ b/2021-09-09t10-48-40z.md
@@ -2,7 +2,7 @@
 date: 2021-09-09 10:48:40
 title: Machine Learning
 id: 2021-09-09t10-48-40z
-tags: [uva_ml1]
+tags: [uva, uva_ml1]
 ---
 
 Tom Mitchell, _Machine Learning_, 1997:
