--- a/2021-09-09t11-36-51z.md
+++ b/2021-09-09t11-36-51z.md
@@ -2,7 +2,7 @@
 date: 2021-09-09 11:36:51
 title: Probability Theory
 id: 2021-09-09t11-36-51z
-tags: [uva_ml1]
+tags: [uva, uva_ml1]
 ---
 
 The experience (data) that is shown to a
@@ -16,5 +16,4 @@ of uncertainty.
 Central topics:
 
 - [Random Variable](./2021-09-09t11-46-21z.md)
-- Sum Rule (TODO)
-- Product Rule (TODO)
+- [Joint Probability](./2021-09-09t19-46-09z.md)
