--- a/2021-09-09t11-46-21z.md
+++ b/2021-09-09t11-46-21z.md
@@ -2,14 +2,14 @@
 date: 2021-09-09 11:46:21
 title: Random Variable
 id: 2021-09-09t11-46-21z
-tags: [uva_ml1]
+tags: [uva, uva_ml1]
 ---
 
 A Random Variable $X$ is a variable that can stochastically take one of many
 values by sampling from a set of possible outcomes:
 
 $$
-x \in \mathbf{X} = {x_i, x_2, \hdots, x_N}
+x \in \mathbf{X} = {x_i, x_2, \dots, x_N}
 $$
 
 A random variable can be [_discrete_ or _continuous_](/2020-09-29t13-51-00z.md).
