independent random variables and tag fix

--- a/2021-09-10t18-26-44z.md
+++ b/2021-09-10t18-26-44z.md
@@ -2,7 +2,7 @@
 date: 2021-09-10 18:26:44
 title: Joint Probability is Symmetric
 id: 2021-09-10t18-26-44z
-tags: [uva_ml]
+tags: [uva, uva_ml1]
 ---
 
 Given two [random variables](./2021-09-09t11-46-21z.md) $X$ and $Y$, their
