continuous random variables

--- a/2021-09-09t11-36-51z.md
+++ b/2021-09-09t11-36-51z.md
@@ -17,3 +17,4 @@ Central topics:
 
 - [Random Variable](./2021-09-09t11-46-21z.md)
 - [Joint Probability](./2021-09-09t19-46-09z.md)
+- [Probability Density](./2021-09-10t19-20-02z.md)
