--- a/2021-09-09t11-46-21z.md
+++ b/2021-09-09t11-46-21z.md
@@ -12,4 +12,5 @@ $$
 x \in \mathbf{X} = {x_i, x_2, \dots, x_N}
 $$
 
-A random variable can be [_discrete_ or _continuous_](/2020-09-29t13-51-00z.md).
+A random variable can be [_discrete_](/2020-09-29t13-51-00z.md) or
+[_continuous_](./2021-09-10t19-20-02z.md).
