expectation, variance and covariance

--- a/2020-09-28t14-45-37z.md
+++ b/2020-09-28t14-45-37z.md
@@ -2,21 +2,29 @@
 date: 2020-09-28 14:45:37
 title: Covariance
 id: 2020-09-28t14-45-37z
+tags: [uva, uva_ml1]
 ---
 
-In [statistics](2020-09-14t14-24-41z.md), covariance is used to classify 3 types
-of relationships between two variables X and Y.
+In [statistics](2020-09-14t14-24-41z.md) and
+[probability theory](./2021-09-09t11-36-51z.md), covariance is used to classify
+3 types of relationships between two
+[random variables](./2021-09-09t11-46-21z.md) X and Y, how they vary _together_.
 
 - Relationships where there is a _positive_ relationship between X and Y.
 - Relationships where there is a _negative_ relationship between X and Y.
 - Relationships where there is no relationship between X and Y.
 
-More rigorously, covariance is defined as the expected value of the product of
-the deviations of x and y from their respective expected values
+More rigorously, covariance is defined as the
+[expected value](./2021-09-11t12-11-20z.md) of the product of the deviations of
+x and y from their respective expected values
 
 $$
-\displaystyle \operatorname {cov} (X,Y)=\operatorname {E} { {\big
-[}(X-\operatorname {E} [X])(Y-\operatorname {E} [Y]){\big ]} }.
+\begin{align}
+\textrm{cov}(X,Y) &=\mathbb{E}\big[(X - \mathbb{E}[X])(Y
+- \mathbb{E}[Y])\big]\\
+
+                  &=\mathbb{E}_{x,y}[xy] - \mathbb{E}[x]\mathbb{E}[y]
+\end{align}
 $$
 
 When calculating sample covariance, the formula can be written as
@@ -28,6 +36,21 @@ $$
 
 A positive covariance value indicates a positive relationship, and vice versa. A
 covariance of 0 indicates no relationship.
+
+When dealing with multidimensional random variables $\mathbf{x}$ and
+$\mathbf{y}$, the covariance is a matrix:
+
+$$
+\begin{align}
+\textrm{cov}(X,Y) &=\mathbb{E}_{\mathbf{x}, \mathbf{y}}\big[
+  (\mathbf{x} - \mathbb{E}[\mathbf{x}])
+  (\mathbf{y}^T - \mathbb{E}[\mathbf{y}^T])
+  \big]\\
+
+                  &=\mathbb{E}_{\mathbf{x},\mathbf{y}}[\mathbf{x}\mathbf{y}^T] -
+                  \mathbb{E}[\mathbf{x}]\mathbb{E}[\mathbf{y}^T]
+\end{align}
+$$
 
 ---
 
