--- a/2021-09-10t19-20-02z.md
+++ b/2021-09-10t19-20-02z.md
@@ -2,6 +2,7 @@
 date: 2021-09-10 19:20:02
 title: Continuous Random Variables and Probability Density
 id: 2021-09-10t19-20-02z
+tags: [uva, uva_ml1]
 ---
 
 When introduced, [random variables](./2021-09-09t11-46-21z.md) are typically
@@ -24,6 +25,8 @@ $$
 \int_{-\infty}^{\infty} p(x)dx &= 1.      \tag{2}
 \end{align}
 $$
+
+We now therefore reason in terms of probability _distributions_.
 
 The [sum](./2021-09-10t17-07-49z.md) and [product](./2021-09-10t17-47-05z.md)
 rules of probability still apply (although the former with the use of an
