--- a/2020-09-28t14-45-37z.md
+++ b/2020-09-28t14-45-37z.md
@@ -38,7 +38,8 @@ A positive covariance value indicates a positive relationship, and vice versa. A
 covariance of 0 indicates no relationship.
 
 When dealing with multidimensional random variables $\mathbf{x}$ and
-$\mathbf{y}$, the covariance is a matrix:
+$\mathbf{y}$, the covariance is a matrix giving the covariance between each
+pair of elements of the two input vectors:
 
 $$
 \begin{align}
