--- a/2021-09-11t13-08-35z.md
+++ b/2021-09-11t13-08-35z.md
@@ -2,6 +2,7 @@
 date: 2021-09-11 13:08:35
 title: Bayesian interpretation of probability theory
 id: 2021-09-11t13-08-35z
+tags: [uva, uva_ml1]
 ---
 
 In [probability theory](./2021-09-09t11-36-51z.md), it is often useful to
