--- a/2021-09-11t17-38-41z.md
+++ b/2021-09-11t17-38-41z.md
@@ -2,6 +2,7 @@
 date: 2021-09-11 17:38:41
 title: Maximum a Posteriori
 id: 2021-09-11t17-38-41z
+tags: [uva, uva_ml1]
 ---
 
 Given a dataset $D = x, \dots, x_N$, we are given the objective to find the
