--- a/2021-09-10t18-29-28z.md
+++ b/2021-09-10t18-29-28z.md
@@ -38,4 +38,4 @@ p(Y|X)  &= \frac{p(X|Y)p(Y)}{\sum_Y{P(X,Y)}} \\
 $$
 
 We see that the denominator acts as a normalization term to ensure that the left
-hand side equals 1.
+hand side integrates to 1.
