--- a/2021-09-11t18-24-42z.md
+++ b/2021-09-11t18-24-42z.md
@@ -7,12 +7,14 @@ tags: [uva, uva_ml1]
 
 [MLE](./2021-09-11t15-54-04z.md) and [MAP](./2021-09-11t17-38-41z.md) are
 frequentist approaches to making predictions about a given dataset $D$: in both
-cases we had to make a choice for $\mathbf{w}$.
+cases we had to make a choice for $\mathbf{w}$, or rather we obtain a single
+optimal estimate of $w$.
 
 A [Bayesian](./2021-09-11t13-08-35z.md) approach to prediction would not dare
-make a choice about $\mathbf{w}$, instead defining a predictive distribution by
-marginalizing (applying sum rule) to our posterior. This allows us to compute
-the entire distribution of $\mathbf{w}$ instead of a single optimal value.
+make a choice about $\mathbf{w}$, instead defining or aiming for a predictive
+_distribution_ by marginalizing (applying sum rule) to our posterior. This
+allows us to compute the entire distribution of $\mathbf{w}$ instead of a single
+optimal value.
 
 $$
 p(x'|D) = \int p(x', \mathbf{w} | D) d\mathbf{w} =
@@ -20,4 +22,8 @@ p(x'|D) = \int p(x', \mathbf{w} | D) d\mathbf{w} =
 $$
 
 This is essentially a weighted average of the product of all the predictive
-distributions of $\mathbf{w}$ weighted by its posterior.
+distributions of $\mathbf{w}$ weighted by its posterior, for a particular value
+$x'$.
+
+We can tell that we need our entire posterior distribution $p(\mathbf{w}|D)$
+before being able to take this approach.
