fix spelling of hypothesis

--- a/2020-09-05t13-04-40z.md
+++ b/2020-09-05t13-04-40z.md
@@ -4,7 +4,7 @@ title: Type I and Type II errors
 id: 2020-09-05t13-04-40z
 ---
 
-In the process of [hypohtesis testing](./2020-09-07t14-04-03z.md), the ultimate
+In the process of [hypothesis testing](./2020-09-07t14-04-03z.md), the ultimate
 outcome is either the rejection or the failure to reject the null hypothesis,
 based on how small the probability of observing a certain phenomenon is
 compared to a given significance threshold.
