computer vision structure zettel

--- a/2020-09-04t14-39-00z.md
+++ b/2020-09-04t14-39-00z.md
@@ -10,3 +10,4 @@ intelligent behaviour in machines. Related notes to get into:
 - [Artificial Neural Networks](./2021-04-26t18-14-48z.md)
 - [Machine Learning](./2021-09-09t10-48-40z.md)
 - [XLA](./2020-10-08t15-21-35z.md)
+- [Computer Vision](./2021-09-25t17-12-58z.md)
