--- a/2021-09-25t17-12-58z.md
+++ b/2021-09-25t17-12-58z.md
@@ -2,6 +2,7 @@
 date: 2021-09-25 17:12:58
 title: Computer Vision
 id: 2021-09-25t17-12-58z
+tags: [uva, uva_cv1]
 ---
 
 The field of Computer Vision (CV) studies algorithms and techniques for
