--- a/2021-09-25t17-12-58z.md
+++ b/2021-09-25t17-12-58z.md
@@ -7,3 +7,5 @@ tags: [uva, uva_cv1]
 
 The field of Computer Vision (CV) studies algorithms and techniques for
 extracting information and semantics from visual data (e.g. images and videos).
+
+- [Geometric Primitives](./2021-09-25t17-58-18z.md)
