fix latex errors

--- a/2020-10-12t20-26-57z.md
+++ b/2020-10-12t20-26-57z.md
@@ -14,9 +14,7 @@ representation of a related set of numbers in terms of matrices. This is to be
 able to use the various techniques of Linear Algebra as well as the
 computational advantages that matrices may bring.
 
-Such an approach was done for complex numbers, i.e. numbers of the form $z=a
-
-- bi$.
+Such an approach was done for complex numbers, i.e. numbers of the form $z=a- bi$.
 
 To find this isomorphism, it would be intuitive to start thinking in terms of
 rotational transformations, given their relation to both matrices and complex
@@ -26,7 +24,7 @@ Consider the two basis vectors $\braket{1, 0}$ and $\braket{0, 1}$. Suppose we
 transform this vector space by rotating it anticlockwise by an angle $\theta$
 about the origin. This rotation will map our basis vectors respectively to the
 new vectors $\braket{\cos{\theta}, \sin{\theta}}$ and
-$\braket{-\sin{theta},
+$\braket{-\sin{\theta},
 \cos{\theta}}$. We can represent this transformation as a
 matrix $R_{\theta}$:
 
