--- a/2021-09-10t17-47-05z.md
+++ b/2021-09-10t17-47-05z.md
@@ -18,7 +18,7 @@ $x_i$ and $y_j$ respectively, out of the number of times that $X$ is sampled to
 be $x_i$ irrespective of $Y$'s value:
 
 $$
-$p(Y = y_j | X = x_i)$ = \frac{n_{ij}}{c_i}.
+p(Y = y_j | X = x_i) = \frac{n_{ij}}{c_i}.
 $$
 
 Recalling [marginal probability](./2021-09-10t17-07-49z.md), we can write $X$
