--- a/2021-09-25t17-49-37z.md
+++ b/2021-09-25t17-49-37z.md
@@ -17,4 +17,5 @@ $$
 
 where $\bar{\mathbf{x}}$ is known as the _augmented vector_.
 
-This system treats vectors that only differ by scaling as equivalent.
+This system treats vectors that only differ by scaling as equivalent. As such,
+homogeneous coordinates are said to be invariant to scaling.
