link autodiff back to uva DL1 course

--- a/2020-10-08t15-31-20z.md
+++ b/2020-10-08t15-31-20z.md
@@ -1,7 +1,8 @@
 ---
 date: 2020-10-08 15:31:20
-title: Reverse-mode Automatic Differentiation 
+title: Reverse-mode Automatic Differentiation
 id: 2020-10-08t15-31-20z
+tags: [uva, uva_dl1]
 ---
 
 [Autodiff](./2020-10-08t15-20-39z.md) is a way of computing derivatives of an
@@ -10,9 +11,9 @@ the use of repeated applications of the chain rule on intermediate
 representations underlying the original function.
 
 Reverse-mode autodiff addresses the $O(n)$ complexity limitation of
-[forward-mode autodiff](./2020-10-08t15-33-40z.md) with respect to $n$
-variables by computing the gradient of a given output variable $y_j$ with
-respect to all input variables $x_k$ in one pass.
+[forward-mode autodiff](./2020-10-08t15-33-40z.md) with respect to $n$ variables
+by computing the gradient of a given output variable $y_j$ with respect to all
+input variables $x_k$ in one pass.
 
 As such, the time complexity reverse-mode autodiff scales linearly with the
 number of output variables $m$ it is used to compute the gradient for, i.e. it
@@ -23,8 +24,8 @@ $\mathbf{y}(x_1, \ldots, x_n)$, we start by performing a forward pass through
 the function, building a computational graph in the process like we did in
 forward-mode autodiff. Here however, we do not simultaneously compute the
 differentials, but instead store the intermediate representations at each node
-in the graph, along with their dependencies in a data structure known as
-a Wengert list, also known as the "tape".
+in the graph, along with their dependencies in a data structure known as a
+Wengert list, also known as the "tape".
 
 Once the graph is built, we then work our way backwards (i.e. from the output
 variable), calculating the derivative of the output with respect to the
@@ -39,9 +40,9 @@ $$
 v_t}{\partial v_i}}.
 $$
 
-As mention above then, the gradient of a given output variable $y_j$ is
-computed in a single pass. We have the derivatives of $y_j$ with respect to all
-the input variables.
+As mention above then, the gradient of a given output variable $y_j$ is computed
+in a single pass. We have the derivatives of $y_j$ with respect to all the input
+variables.
 
 This is ideal for machine learning, where we have an immense amount of input
 variables (parameters), for few outputs.
