--- a/2020-07-21t11-29-02z.md
+++ b/2020-07-21t11-29-02z.md
@@ -13,6 +13,7 @@ notes.
 - [Artificial Intelligence](./2020-09-04t14-39-00z.md)
 - [Atmospheric Science](./2020-08-30t15-46-28z.md)
 - [Computer Science](./2020-10-14t15-05-24z.md)
+- [Linguistics](./2021-12-20t10-50-39z.md)
 - [Miscellaneous Notes](./2020-08-30t15-47-14z.md)
 - [Statistics](./2020-09-14t14-24-41z.md)
 - [The Zettelkasten Method](./2020-08-24t15-19-14z.md)
