--- a/2021-12-19t15-59-10z.md
+++ b/2021-12-19t15-59-10z.md
@@ -17,3 +17,8 @@ We have different kinds of morphemes:
   - **prefix**: before the stem
   - **infix**: inside the stem
   - **circumfix**: around the stem
+
+We can distinguish between two kinds of morphology:
+
+- [Inflectional morphology](./2021-12-19t16-14-03z.md)
+- [Derivational morphology](./2021-12-19t16-00-56z.md)
