--- a/2021-12-19t15-46-46z.md
+++ b/2021-12-19t15-46-46z.md
@@ -44,7 +44,7 @@ To this we apply the HMM independence assumptions allowing us to express our
 probabilities as products:
 
 $$
-P(w_1, \dots, w_n | t_1, \dots, t_n \approx \prod_{i=1}^n P(w_i | t_i),
+P(w_1, \dots, w_n | t_1, \dots, t_n) \approx \prod_{i=1}^n P(w_i | t_i),
 $$
 
 And
