--- a/2020-09-04t13-57-25z.md
+++ b/2020-09-04t13-57-25z.md
@@ -2,6 +2,7 @@
 date: 2020-09-04 13:57:25
 title: What is an RNN?
 id: 2020-09-04t13-57-25z
+tags: [uva, uva_dl1]
 ---
 
 An RNN (Recurrent Neural Network) is a kind of
