--- a/2021-04-22t14-59-37z.md
+++ b/2021-04-22t14-59-37z.md
@@ -2,6 +2,7 @@
 date: 2021-04-22 14:59:37
 title: Long Short-Term Memory (LSTM)
 id: 2021-04-22t14-59-37z
+tags: [uva, uva_dl1]
 ---
 
 A Long Short-Term Memory (LSTM) is a type of
