add dl1 tag to vanishing gradient

--- a/2021-04-23t16-08-52z.md
+++ b/2021-04-23t16-08-52z.md
@@ -2,6 +2,7 @@
 date: 2021-04-23 16:08:52
 title: Vanishing/Exploding Gradients in Gradient-Based Learning Methods
 id: 2021-04-23t16-08-52z
+tags: [uva, uva_dl1]
 ---
 
 The vanishing gradient problem is a phenomenon which sometimes occurs during the
