add note that KL div can be computed in closed-form

--- a/2021-12-22t19-22-15z.md
+++ b/2021-12-22t19-22-15z.md
@@ -24,6 +24,9 @@ We now recognize two terms in the RHS respectively:
 - the second term is a regularization loss, pushing the variational posterior
   towards the prior.
 
+Importantly, with this expression, the KL term can be computed in
+[closed-form](./2020-10-09t13-35-53z.md).
+
 Returning to our extension of the autoencoder, we note that $q_\phi(z|x)$ is
 implemented as our encoder network and $p_\theta(x|z)$ is implemented as our
 decoder network.
