--- a/2021-12-22t18-12-57z.md
+++ b/2021-12-22t18-12-57z.md
@@ -9,7 +9,7 @@ Variational inference is a method for approximating the posterior necessary for
 [training latent variable models](./2021-12-22t17-24-16z.md).
 
 Introducing mathematical definitions, we approximate the exact posterior
-$p_\theta(z|x)$ with an approximate posterior $q\_\phi(z|x)$, referred to as the
+$p_\theta(z|x)$ with an approximate posterior $q_\phi(z|x)$, referred to as the
 _variational posterior_.
 
 We can use any distribution $q_\phi(z)$ as long as
