change title slightly

--- a/2021-04-26t19-23-41z.md
+++ b/2021-04-26t19-23-41z.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-04-26 19:23:41
-title: Learning in the context of ANNs and the Cost Function
+title: Learning in the context of ANNs and the Loss Function
 id: 2021-04-26t19-23-41z
 ---
 
