--- a/2021-04-26t18-14-48z.md
+++ b/2021-04-26t18-14-48z.md
@@ -21,11 +21,11 @@ Very simply put, the [activations](./2021-04-26t15-11-38z.md) in one layer
 affect the activations in the next layer, until we finally obtain the output
 vector.
 
-As such, an Neural Network can be thought of as a
+As such, a Neural Network can be thought of as a
 [function](./2021-12-19t21-39-07z.md), taking some inputs, and computing some
 outputs based on them.
 
 Neural Networks are typically "deep", i.e. consisting in more than one hidden
-layer. For this reason, they form the
-[Machine Learning](./2021-09-09t10-48-40z.md) subfield that is referred to as
-_Deep Learning_.
+layer. For this reason, they are often directly referred to as "deep neural
+networks" and form the [Machine Learning](./2021-09-09t10-48-40z.md) subfield
+that is referred to as _Deep Learning_.
