--- a/2021-04-26t18-14-48z.md
+++ b/2021-04-26t18-14-48z.md
@@ -21,9 +21,8 @@ Very simply put, the [activations](./2021-04-26t15-11-38z.md) in one layer
 affect the activations in the next layer, until we finally obtain the output
 vector.
 
-As such, a Neural Network can be thought of as a
-[function](./2021-12-19t21-39-07z.md), taking some inputs, and computing some
-outputs based on them.
+As such, a Neural Network can be thought of as a function, taking some inputs,
+and computing some outputs based on them.
 
 Neural Networks are typically "deep", i.e. consisting in more than one hidden
 layer. For this reason, they are often directly referred to as "deep neural
