--- a/2021-12-19t22-34-39z.md
+++ b/2021-12-19t22-34-39z.md
@@ -22,7 +22,7 @@ iterations) for free.
 A common mathematical expression for the SGD update is
 
 $$
-w^{(t)} = w^{(t-1)} - \eta g^(t)
+w^{(t)} = w^{(t-1)} - \eta g^{(t)}
 $$
 
 where $w^{(t)}$ is the parameter we are updating, $\eta$ is the learning rate
