remove link to inception zettel

--- a/2021-12-22t15-50-48z.md
+++ b/2021-12-22t15-50-48z.md
@@ -16,10 +16,12 @@ and of **high diversity** (to avoid mode collapse).
 Two metrics that can capture these qualities are
 
 - Inception score (IS): This is a score that makes use of a pre-trained deep
-  learning classifier, originally the
-  [Inception model](./2021-12-21t22-37-46z.md). It has a lowest value of 1.0 and
-  a highest value of the number of classes supported by the classification model
+  learning classifier, originally the Inception model
+  [@szegedyGoingDeeperConvolutions2015]. It has a lowest value of 1.0 and a
+  highest value of the number of classes supported by the classification model
   used. The higher the inception score, the better our GAN.
 - The Fréchet Inception Distance (FID): which measures the distance between our
   real and generated samples using inception. The lower the distance, the better
   our generative model
+
+## References
