git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "f663143"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "f663143"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -472,6 +472,15 @@
   file = {/Users/thesofakillers/Zotero/storage/EZQQS9QK/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c.html}
 }
 
+@inproceedings{szegedyGoingDeeperConvolutions2015,
+  title = {Going {{Deeper With Convolutions}}},
+  booktitle = {Proceedings of the {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+  year = {2015},
+  pages = {1--9},
+  file = {/Users/thesofakillers/Zotero/storage/6J7RJHKJ/Szegedy et al_2015_Going Deeper With Convolutions.pdf;/Users/thesofakillers/Zotero/storage/WEDRG23Q/Szegedy_Going_Deeper_With_2015_CVPR_paper.html}
+}
+
 @article{tokovininMeasuringTurbulenceProfile2002,
   title = {Measuring Turbulence Profile from Scintillations of Single Stars},
   author = {Tokovinin, A. and Kornilov, V.},
